--- a/Loggers y Gzip/package.json
+++ b/Loggers y Gzip/package.json
@@ -1,20 +1,24 @@
 {
   "name": "loggers-y-gzip",
   "version": "1.0.0",
-  "description": "",
   "main": "./src/server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ."
+    "test": "nodemon ./src/benchmark.js",
+    "start": "0x ./src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^2.0.0-31",
+    "autocannon": "^7.10.0",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "log4js": "^6.9.1",
     "pino": "^8.11.0",
     "pino-multi-stream": "^6.0.0"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
